syntax = "proto3";
 
option java_outer_classname = "hashmap.HashMapOperationProtos";

message HashMapOperation {
    OperationType type = 1;
    string key = 2;
    string value = 3;

    enum OperationType {
        PUT = 0;
        REMOVE = 1;
    }
}

message HashMapState {
	message Entry {
		string key = 1;
    	string value = 2;
	}

	repeated Entry entries = 1;
}